objects/LLC_BI__Product_Package_Team__c.object
<CustomObject>
    <description>The Product Package Team Member object captures information about the team members assigned to Product Package.</description>
    <fields>
        <fullName>CF_Created_From_Loan_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox gets checked once the Deal Team Member is created on creation of Loan through Loan AFTER Flow</description>
        <label>Created From Loan Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Assigned_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used, as the Product Package Team is not currently leveraged within product package. Instead, Functionality for Team Members is built into the Visual Force related list view for Product Package Loan Team Members.</description>
        <label>Role</label>
        <referenceTo>LLC_BI__Role__c</referenceTo>
        <relationshipLabel>Product Package Team Members</relationshipLabel>
        <relationshipName>Product_Package_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <description>This field will be automatically populated when creating a team member record from the product package. This field is a master detail field, used to specify the Product Package that the Product Package team is associated to.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipName>Product_Package_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a look up to an nCino user that will be assigned a role, and associated to the Product Package team. This is a manually entered field and is required to appropriately associate the team member to the product package.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Package_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Package Team Member</label>
    <nameField>
        <displayFormat>PT-{00000000}</displayFormat>
        <label>Product Package Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Package Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>